# simpath

./: .travis.yml  Cargo.toml  Makefile  README.md
.github/workflows/: build.yml
src/: lib.rs
