[package]
name = "simpath"
version = "1.6.0"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
description = "Search for files on a path defined in an environment variable"
license = "MIT"
documentation = "https://github.com/andrewdavidmackenzie/simpath/README.md"
homepage = "https://github.com/andrewdavidmackenzie/simpath/README.md"
repository = "https://github.com/andrewdavidmackenzie/simpath/"
readme = "README.md"

[features]
default = ["urls"]
urls = ["curl"]

[dependencies]
url = "~2.1"
curl = { version = "~0.4", optional = true }

[dev-dependencies]
tempdir = "~0.3.5"
url = "~2.1"

[badges]
maintenance = {status = "actively-developed" }