[package]
name = "simpath"
version = "2.0.0"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
description = "Search for files on a path defined in an environment variable"
license = "MIT"
documentation = "https://github.com/andrewdavidmackenzie/simpath/README.md"
homepage = "https://github.com/andrewdavidmackenzie/simpath/README.md"
repository = "https://github.com/andrewdavidmackenzie/simpath/"
readme = "README.md"

[features]
default = []
urls = ["url", "curl"]

[dependencies]
url = { version = "~2.1", optional = true }
curl = { version = "~0.4", optional = true }

[dev-dependencies]
tempdir = "~0.3.5"
url = "~2.1"

[badges]
maintenance = {status = "actively-developed" }